--- a/client/src/assets/scss/Expenses/ExpensesListAndEdit.scss
+++ b/client/src/assets/scss/Expenses/ExpensesListAndEdit.scss
@@ -1,5 +1,4 @@
 .expensesList_wrapper{
-    max-width: 2560px;
     .expensesList_cont_wrapper{
         display: flex;
         background-color: #EFEDEA;
@@ -18,6 +17,10 @@
                 height: 100%;
                 border: 1px solid #fff;
                 border-radius: 5px;
+                // small screen
+                @media only screen and (max-width: 1600px){
+                    width: 100%;
+                }
                 .expensesList_top_body_cont{
                     background-color: #fff;
                     height: 2rem;
