--- a/client/src/assets/scss/Planning/PlanningListAndEdit.scss
+++ b/client/src/assets/scss/Planning/PlanningListAndEdit.scss
@@ -8,7 +8,10 @@
     .planning_table_wrapper{
       width: 100%;
       height: 100%;
-      padding: 10px 2px 10px 2px;
+      padding: 20px;
+      max-width: 100%; /* Prevent overflow */
+      overflow-x: hidden; /* Prevent horizontal scroll */
+      box-sizing: border-box;
       .planning_top_cont{
         border: 1px solid #fff;
         border-radius: 5px;
