--- a/client/src/assets/scss/Results/ResultsListAndEdit.scss
+++ b/client/src/assets/scss/Results/ResultsListAndEdit.scss
@@ -8,7 +8,7 @@
     .results_summary_table_wrapper{
       width: 100%;
       height: 100%;
-      padding: 10px 2px 10px 2px;
+      padding: 20px;
       .results_summary_top_cont{
         border: 1px solid #fff;
         border-radius: 5px;
