expense and cos numbers and model updated to DECIMAL and Limit Added

--- a/client/src/assets/scss/Expenses/ExpensesListAndEdit.scss
+++ b/client/src/assets/scss/Expenses/ExpensesListAndEdit.scss
@@ -142,7 +142,7 @@
                                             border: 1px solid  #d0cdcd;
                                             text-align: center;
                                             input{
-                                                width: 70px;
+                                                // width: 70px;
                                             }
                                         }
                                     }
