--- a/client/src/assets/scss/CostOfSales/CostOfSalesListAndEdit.scss
+++ b/client/src/assets/scss/CostOfSales/CostOfSalesListAndEdit.scss
@@ -87,7 +87,32 @@
                             }
                             scrollbar-width: none; 
                         }
+                        .costOfSalesList_table_cont.editScrollable {
+                            overflow-x: auto;
+                            padding: 0px 0px 0px 0px;
+                            
+                        }
                         .costOfSalesList_table_cont{
+                            overflow-x: auto;
+                            &::-webkit-scrollbar {
+                                width: 8px;
+                            }
+                            &::-webkit-scrollbar-track {
+                                background: #e0e0e0;
+                            }
+                            &::-webkit-scrollbar-thumb {
+                                background-color: #888;
+                                border-radius: 10px;
+                            }
+                            &::-webkit-scrollbar-thumb:hover {
+                                background-color: #555;
+                            }
+                            &:not(:hover) {
+                                &::-webkit-scrollbar {
+                                    width: 0;
+                                }
+                                scrollbar-width: none; 
+                            }
                             table{
                                 width: 100%;
                                 .costOfSalesList_table_title{
