--- a/client/src/assets/scss/ProjectSalesResults/ProjectSalesResultsListAndEdit.scss
+++ b/client/src/assets/scss/ProjectSalesResults/ProjectSalesResultsListAndEdit.scss
@@ -85,7 +85,11 @@
                             
                         }
                         .projectSalesResultsList_table_cont{  
+                            max-height: 100%;
+                            overflow-y: auto;
                             overflow-x: auto;
+                            white-space: nowrap;
+                            scrollbar-width: thin;
                             &::-webkit-scrollbar {
                                 width: 8px;
                             }
