--- a/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
+++ b/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
@@ -68,7 +68,11 @@
                             
                         }
                         .projectsList-table-cont{  
+                            max-height: 100%;
+                            overflow-y: auto;
                             overflow-x: auto;
+                            white-space: nowrap;
+                            scrollbar-width: thin;
                             &::-webkit-scrollbar {
                                 width: 8px;
                             }
