--- a/client/src/assets/scss/Users/UsersListAndEdit.scss
+++ b/client/src/assets/scss/Users/UsersListAndEdit.scss
@@ -6,8 +6,11 @@
             flex-direction: column;
         }
         .UsersListAndEdit_maincontent_wrapper{
+            max-width: 100%;
+            padding: 10px 30px; 
+            overflow-y :hidden;
+            box-sizing: border-box;
             width: 100%;
-            padding: 10px 30px 10px 30px;
             .UsersListAndEdit_top_content{
                 position: relative;
                 display: flex;
@@ -86,7 +89,35 @@
                         }
                         scrollbar-width: none; 
                     }
+                    .UsersListAndEdit_table_cont.editScrollable {
+                        overflow-x: auto;
+                        padding: 0px 0px 0px 0px;
+                    }
                     .UsersListAndEdit_table_cont{
+                        max-height: 100%;
+                        overflow-y: auto;
+                        overflow-x: auto;
+                        white-space: nowrap;
+                        scrollbar-width: thin;
+                        &::-webkit-scrollbar {
+                            width: 8px;
+                        }
+                        &::-webkit-scrollbar-track {
+                            background: #e0e0e0;
+                        }
+                        &::-webkit-scrollbar-thumb {
+                            background-color: #888;
+                            border-radius: 10px;
+                        }
+                        &::-webkit-scrollbar-thumb:hover {
+                            background-color: #555;
+                        }
+                        &:not(:hover) {
+                            &::-webkit-scrollbar {
+                                width: 0;
+                            }
+                            scrollbar-width: none; 
+                        }                         
                         table{
                             width: 100%;
                             .UsersListAndEdit_table_title{
