--- a/client/src/assets/scss/CostOfSales/CostOfSalesListAndEdit.scss
+++ b/client/src/assets/scss/CostOfSales/CostOfSalesListAndEdit.scss
@@ -100,6 +100,25 @@
                             overflow-x: auto;
                             white-space: nowrap;
                             scrollbar-width: thin;
+                            &::-webkit-scrollbar {
+                                width: 8px;
+                            }
+                            &::-webkit-scrollbar-track {
+                                background: #e0e0e0;
+                            }
+                            &::-webkit-scrollbar-thumb {
+                                background-color: #888;
+                                border-radius: 10px;
+                            }
+                            &::-webkit-scrollbar-thumb:hover {
+                                background-color: #555;
+                            }
+                            &:not(:hover) {
+                                &::-webkit-scrollbar {
+                                    width: 0;
+                                }
+                                scrollbar-width: none; 
+                            }                         
                             table{
                                 width: 100%;
                                 .costOfSalesList_table_title{
