--- a/client/src/assets/scss/CostOfSalesResults/CostOfSalesResultsListAndEdit.scss
+++ b/client/src/assets/scss/CostOfSalesResults/CostOfSalesResultsListAndEdit.scss
@@ -67,7 +67,6 @@
                         scrollbar-width: thin;
                         scrollbar-color: #888 #e0e0e0;
                         padding: 0px 40px 0px 40px;
-                        
                         @media only screen and (min-width: 1920px){
                             height: 60vh;
                         }
@@ -100,6 +99,25 @@
                             overflow-x: auto;
                             white-space: nowrap;
                             scrollbar-width: thin;
+                            &::-webkit-scrollbar {
+                                width: 8px;
+                            }
+                            &::-webkit-scrollbar-track {
+                                background: #e0e0e0;
+                            }
+                            &::-webkit-scrollbar-thumb {
+                                background-color: #888;
+                                border-radius: 10px;
+                            }
+                            &::-webkit-scrollbar-thumb:hover {
+                                background-color: #555;
+                            }
+                            &:not(:hover) {
+                                &::-webkit-scrollbar {
+                                    width: 0;
+                                }
+                                scrollbar-width: none; 
+                            }                         
                             table{
                                 width: 100%;
                                 .costOfSalesResultsList_table_title{
