修正分コミット(人件費一覧及び編集、案件人件費実績一覧及び編集)

--- a/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesList.scss
+++ b/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesList.scss
@@ -130,6 +130,7 @@
                                                 color: #fff;
                                                 border: none;
                                                 font-size: 14px;
+                                                white-space: nowrap;
                                             }
                                         }
                                         .employeeExpensesList_table_body{
