--- a/client/src/assets/scss/EmployeeExpensesResults/EmployeeExpensesResultsList.scss
+++ b/client/src/assets/scss/EmployeeExpensesResults/EmployeeExpensesResultsList.scss
@@ -133,6 +133,7 @@
                                                 color: #fff;
                                                 border: none;
                                                 font-size: 14px;
+                                                white-space: nowrap;
                                             }
                                         }
                                         .employeeExpensesResultsList_table_body{
