--- a/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesList.scss
+++ b/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesList.scss
@@ -118,6 +118,7 @@
                                         scrollbar-width: none; 
                                     }                          
                                     .table{
+                                        table-layout: fixed;
                                         width: 100%;
                                         .employeeExpensesList_table_title{
                                             position: sticky;
@@ -127,6 +128,7 @@
                                             background-color: #808080;
                                             border: 1px solid #808080;
                                             .employeeExpensesList_table_title_content_vertical{
+                                                width: 113px;
                                                 color: #fff;
                                                 border: none;
                                                 font-size: 14px;
