--- a/client/src/assets/scss/EmployeeExpensesResults/EmployeeExpensesResultsList.scss
+++ b/client/src/assets/scss/EmployeeExpensesResults/EmployeeExpensesResultsList.scss
@@ -121,15 +121,17 @@
                                         scrollbar-width: none; 
                                     }                          
                                     .table{
+                                        table-layout: fixed;
                                         width: 100%;
                                         .employeeExpensesResultsList_table_title{
-                                            position: sticky;
+                                                position: sticky;
                                             top: 0;
                                             z-index: 1;
                                             text-align: center;
                                             background-color: #808080;
                                             border: 1px solid #808080;
                                             .employeeExpensesResultsList_table_title_content_vertical{
+                                                width: 113px;
                                                 color: #fff;
                                                 border: none;
                                                 font-size: 14px;
