--- a/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesList.scss
+++ b/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesList.scss
@@ -128,7 +128,7 @@
                                             background-color: #808080;
                                             border: 1px solid #808080;
                                             .employeeExpensesList_table_title_content_vertical{
-                                                width: 113px;
+                                                width: 125px;
                                                 color: #fff;
                                                 border: none;
                                                 font-size: 14px;
@@ -269,7 +269,7 @@
                                                 }
                                                 .employeeExpenseModal{
                                                     position: relative;
-                                                    display: inline-block;
+                                                    /*display: inline-block;*/
                                                     cursor: pointer;
                                                 }
                                                 .employeeExpenseModal .employeeExpenseModal-tooltip {
