fixing colors and headers WIP

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -47,3 +47,4 @@
 @import './Results/ResultsListAndEdit.scss';
 @import './Results/TableResultsA.scss';
 @import './Results/TableResultsB.scss';
+@import './TableDashboard/TableDashboard.scss';
