--- a/client/src/assets/scss/Components/TablePlanningA.scss
+++ b/client/src/assets/scss/Components/TablePlanningA.scss
@@ -33,6 +33,7 @@
     }
     .table-planning {
       width: 100%;
+      padding: 0 10px;
       table {
         width: 100%;
         border-collapse: collapse;
