--- a/client/src/assets/scss/Results/TableResultsA.scss
+++ b/client/src/assets/scss/Results/TableResultsA.scss
@@ -33,6 +33,7 @@
     }
     .table-results_summary {
       width: 100%;
+      padding: 0 10px;
       table {
         width: 100%;
         border-collapse: collapse;
