Add sticky left column on dashboard table

--- a/client/src/assets/scss/Dashboard/Dashboard.scss
+++ b/client/src/assets/scss/Dashboard/Dashboard.scss
@@ -111,7 +111,7 @@
             .dashboard_bottom_cont{
                 margin-top: 6px;
                 width: 100%;
-                // padding: 5px;
+                padding: 0 10px 0 0;
                 .dashboard_right-content{
                     padding: 10px 10px 10px 10px;
                     .dashboard_paginate{
