--- a/client/src/assets/scss/Dashboard/Dashboard.scss
+++ b/client/src/assets/scss/Dashboard/Dashboard.scss
@@ -71,15 +71,29 @@
                         }
                     }
                     .dashboard_custom-card-content{
-                        margin: 10px 0px 10px 10px;
+                        margin: 10px;
                         .dashboard_text1{
                             font-weight: 800;
                         }
+                        .dashboard-card-planning{
+                            margin: 5px 0px;
+                        }
+                        .dashboard-card-result{
+                            margin: 0;
+                        }
                         .dashboard_numTxt{
-                            font-size: 24px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: space-between;
+                            font-size: 18px;
                             font-weight: bolder;
                             .dashboard_totalTxt{
                                 font-size: 12px;
+                            }
+                            .dashboard_total_number{
+                                font-size: 16px;
+                                padding-left: 5px;
+
                             }
                         }
                         .dashboard_text2{
