--- a/client/src/assets/scss/Dashboard/Dashboard.scss
+++ b/client/src/assets/scss/Dashboard/Dashboard.scss
@@ -103,10 +103,34 @@
                 }
                 .dashboard_graph_cont{
                     width: 100%;
+                    z-index: 1 !important;
+                    position: relative;
                     @media only screen and (max-width: 1000px){
                         max-width: 1000px;
                         margin: 0 auto;
                         padding: 10px;
+                    }
+                    .dashboard-graph-switch-type{
+                    background-color: rgba(128, 128, 128, 0.116);
+                    position: absolute;
+                    border-radius: 0 5px 0 0dvh;
+                    bottom: 0px;
+                    left: 95px;
+                    padding: 5px 10px 5px 10px;
+                    display:flex;
+                    gap: 10px;
+                    z-index:1;
+                    justify-content:center;
+                    }
+                    .dashboard-graph-change{
+                        border-radius: 0 5px 0 0;
+                        display: flex;
+                        gap: 10px;
+                        bottom: 1px;
+                        left: 1px;
+                        position: absolute;
+                        padding: 5px 10px 5px 5px;
+                        z-index: 2;
                     }
                     .dashboard_graph_wrap{
                         .card-custom{
