--- a/client/src/assets/scss/Dashboard/Dashboard.scss
+++ b/client/src/assets/scss/Dashboard/Dashboard.scss
@@ -115,7 +115,7 @@
                     position: absolute;
                     border-radius: 0 5px 0 0dvh;
                     bottom: 0px;
-                    left: 95px;
+                    // left: 95px;
                     padding: 5px 10px 5px 10px;
                     display:flex;
                     gap: 10px;
