--- a/client/src/assets/scss/Planning/PlanningListAndEdit.scss
+++ b/client/src/assets/scss/Planning/PlanningListAndEdit.scss
@@ -137,6 +137,21 @@
                 float: right;
                 padding: 0px 8px;
               }
+              .button-container{
+                display: flex;
+                justify-content: end;
+                align-items: center;
+              }
+               button.edit_cancel_btn {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 1%;
+                padding: 5px 20px 5px 20px;
+                border-radius: 7px;
+                margin: 20px 6px;
+                background: #f4f4f6;
+              }
               button.edit_submit_btn {
                 display: flex;
                 justify-content: center;
