--- a/client/src/assets/scss/Components/TablePlanningA.scss
+++ b/client/src/assets/scss/Components/TablePlanningA.scss
@@ -1,43 +1,36 @@
 .table-planning-container {
-    margin-top: 10px;
-    padding: 0px 10px;
-    width: 180vh;
-    height: 85vh;
-    overflow-y: auto; 
-    overflow-x: hidden;
-    scrollbar-width: none;
-    transition: scrollbar-color 0.3s ease;
+
+    height: 75vh;
+    overflow-y: scroll; 
+    
     &::-webkit-scrollbar {
-        width: 8px;
-    }
-    &::-webkit-scrollbar-thumb {
-        background-color: rgba(0, 0, 0, 0.3);
-        border-radius: 10px;
-    }
-    &::-webkit-scrollbar-track {
+      scrollbar-width: thin; 
+      background: transparent;
+      }
+      &::-webkit-scrollbar-thumb {
+      }
+      &::-webkit-scrollbar-track {
         background: transparent;
-    }
-    &:hover {
-        scrollbar-width: thin; 
+      }
+      &:hover {
         scrollbar-color: rgba(0, 0, 0, 0.3) transparent; 
-        &::-webkit-scrollbar {
-            width: 8px;
+        scrollbar-width: thin; 
+        &::-webkit-scrollbar {            
         }
         &::-webkit-scrollbar-thumb {
             background-color: rgba(0, 0, 0, 0.5);
-            border-radius: 10px;
+
         }
         &::-webkit-scrollbar-track {
             background: transparent;
         }
     }
     .table-planning {
-      width: 100%;
-      padding: 0 10px;
+      // width: 100%;
+      padding: 0 0 0 10px;
       table {
         width: 100%;
-        border-collapse: collapse;
-        border: 1px solid black;
+
         @media only screen and (min-width: 1920px){
           height: 119vh;
         }
@@ -48,7 +41,7 @@
           top: -1px !important; // Need this to deal with padding on container so content does not reappear above header when scrolling
         }
         .month-data{
-          width: 7%;
+          // width: 7%;
         }
         th, td {
           border: 1px solid #ddd;
@@ -78,7 +71,9 @@
         }
         .input_tag{
           text-align: right;
-          width: 67px;
+          font-size: 11px;
+          width: 54px;
+          // overlow-x: scroll;
         }
         th {
           white-space: nowrap;
@@ -111,4 +106,7 @@
       }
     }
   }
+//   .test-container{
+//   background-color: green;
+// }
   
