--- a/client/src/assets/scss/Planning/PlanningListAndEdit.scss
+++ b/client/src/assets/scss/Planning/PlanningListAndEdit.scss
@@ -1,28 +1,36 @@
 .planning_wrapper{
+.main-header-buttons{
+
+}
   .planning_content_wrapper{
     display: flex;
     background-color: #EFEDEA;
+
     @media only screen and (max-width: 1000px){
-        flex-direction: column;
+      flex-direction: column;
     }
     .planning_table_wrapper{
       width: 100%;
-      height: 100%;
-      padding: 20px;
-      max-width: 100%; /* Prevent overflow */
-      overflow-x: hidden; /* Prevent horizontal scroll */
-      box-sizing: border-box;
+      height: 88vh;
+
+      padding: 20px 20px 20px 20px;
+
       .planning_top_cont{
         border: 1px solid #fff;
         border-radius: 5px;
         background-color: #fff;
         height: 100%;
+
         .planning_content{
+          // padding: 20px 20px 10px 20px;
           .planning_btm{
             .planning_header_text{
+
+
               display: flex;
-              width: 100%;
+    
               justify-content: space-between;
+              margin-bottom: 10px;
               .planning_left-content{
                 font-weight: bold;
                 margin-top: 13px;
@@ -42,7 +50,7 @@
                     display: inline-block;
                   }
                   p.planning_pl-label_disabled {
-                      color: #c6c6c6;
+                      color: #c6c6c6;   
                   }
                   button.planning_mode_switch {
                     border: 1px solid;
@@ -105,9 +113,16 @@
               }
             }
             .planning_tbl_cont{
+
+              // background-color: cyan;
+              height: 100%;
               .editScrollable{
-                overflow-x: auto;
-                padding: 0px 0px 0px 0px;
+                // overflow: auto; /* Ensures content stays within bounds */
+                
+                // background-color: cyan;
+                // overflow-x: auto;
+                // overflow-y: scroll;
+                // padding: 0px 0px 0px 0px;
               }
               .table_content_planning{
                 .table-planning-container{
@@ -117,6 +132,8 @@
                     // height: 122vh;
                   }
                   table{
+                    // height: 85vh;
+                    // background-color: #2196F3;
                     // width: 100%;
                   }
                 }
@@ -139,6 +156,9 @@
               }
               .button-container{
                 display: flex;
+                position: absolute;
+                bottom: 0px;
+                right: 10px;
                 justify-content: end;
                 align-items: center;
               }
@@ -168,4 +188,10 @@
       }
     }
   }
+}
+.test-container{
+  position: sticky;
+  background-color: white;
+  z-index: 2;
+  top: -1px !important;
 }
