--- a/client/src/assets/scss/Planning/TablePlanningA.scss
+++ b/client/src/assets/scss/Planning/TablePlanningA.scss
@@ -1,5 +1,4 @@
 .table-planning-container {
-
     height: 75vh;
     overflow-y: scroll; 
     
@@ -30,15 +29,8 @@
       padding: 0 0 0 10px;
       table {
         width: 100%;
-
         @media only screen and (min-width: 1920px){
           height: 119vh;
-        }
-        .table-header-sticky{
-          position: sticky;
-          background-color: white;
-          z-index: 2;
-          top: -1px !important; // Need this to deal with padding on container so content does not reappear above header when scrolling
         }
         .month-data{
           // width: 7%;
@@ -49,12 +41,18 @@
           text-align: right;
           font-size: 11.7px;
           &.indented-label {
-            text-align: right;
+            display: flex;
+            height: 100%;
+            align-items: center;
+            justify-content: right;
             font-size: 12.6px;
             font-weight: bold;
           }
           &.no-indent {
-            text-align: left;
+            display: flex;
+            height: 100%;
+            align-items: center;
+            justify-content: left;
             font-size: 12.6px;
             font-weight: bold;
             background-color: #efedea;
@@ -69,11 +67,28 @@
             background-color: #efedea;
           }
         }
-        .input_tag{
-          text-align: right;
-          font-size: 11px;
-          width: 54px;
-          // overlow-x: scroll;
+        .column-headers{
+          align-items: center;
+        }
+        td.value-container{
+        // For Planning Edit Screen
+          .input_tag {
+              height: 100%;
+              // width: 100%;
+              text-align: right;
+              font-size: 11px;
+              width: 54px;
+              border: solid 1px gray;
+              overflow-x: scroll;
+              border-radius: 2px;
+          }
+          .values{
+            width: 100%;
+            display: flex;
+            height: 100%;
+            align-items: center;
+            justify-content: right;
+          }
         }
         th {
           white-space: nowrap;
@@ -106,7 +121,3 @@
       }
     }
   }
-//   .test-container{
-//   background-color: green;
-// }
-  
