--- a/client/src/assets/scss/Planning/PlanningListAndEdit.scss
+++ b/client/src/assets/scss/Planning/PlanningListAndEdit.scss
@@ -12,23 +12,18 @@
     .planning_table_wrapper{
       width: 100%;
       height: 88vh;
-
       padding: 20px 20px 20px 20px;
-
+      
       .planning_top_cont{
         border: 1px solid #fff;
         border-radius: 5px;
         background-color: #fff;
         height: 100%;
-
+        
         .planning_content{
-          // padding: 20px 20px 10px 20px;
           .planning_btm{
             .planning_header_text{
-
-
               display: flex;
-    
               justify-content: space-between;
               margin-bottom: 10px;
               .planning_left-content{
@@ -38,6 +33,7 @@
               }
               .planning_right-content{
                 padding: 10px 10px 5px 0px;
+                
                 .planning_paginate{
                   gap: 10px;
                   display: flex;
@@ -46,6 +42,7 @@
                   padding: 3px 10px;
                   border-radius: 5px;
                   align-items: center;
+                  
                   .planning_pl-label{
                     display: inline-block;
                   }
@@ -113,28 +110,21 @@
               }
             }
             .planning_tbl_cont{
-              
-              // background-color: cyan;
               height: 100%;
+              .table-header-sticky{
+                position: sticky;
+                background-color: white;
+                z-index: 2;
+                // Need this to deal with padding on container so content does not reappear above header when scrolling
+                top: -1px !important; 
+              }
               .editScrollable{
-                // overflow: auto; /* Ensures content stays within bounds */
-                
-                // background-color: cyan;
-                // overflow-x: auto;
-                // overflow-y: scroll;
-                // padding: 0px 0px 0px 0px;
               }
               .table_content_planning{
                 .table-planning-container{
-                  // width: 100% !important;
-                  // height: 100%;
                   @media only screen and (min-width: 1920px){
-                    // height: 122vh;
                   }
                   table{
-                    // height: 85vh;
-                    // background-color: #2196F3;
-                    // width: 100%;
                   }
                 }
               }
@@ -142,12 +132,9 @@
                 display: none;
               }
               .table_content_props{
-                // height: 118vh;
                 @media only screen and (min-width: 1920px){
-                  // height: 120vh;
                 }
                 .planning_scrollable{
-                  // max-height: 115vh;
                 }
               }
               .div_submit {
@@ -189,9 +176,3 @@
     }
   }
 }
-.table-header-sticky{
-      position: sticky;
-      background-color: white;
-      z-index: 2;
-      top: -1px !important; // Need this to deal with padding on container so content does not reappear above header when scrolling
-    }
